--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Practice async thunks by playing with JSON Placeholder API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Ahmed Ali",
   "license": "ISC",
